--- a/ReposBAEK.vcxproj.filters
+++ b/ReposBAEK.vcxproj.filters
@@ -15,7 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="9461.cpp">
+    <ClInclude Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.28.29910\include\bits\stdc++.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="1541.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
