--- a/ReposBOJ.vcxproj.filters
+++ b/ReposBOJ.vcxproj.filters
@@ -20,8 +20,16 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="10227.cpp">
+    <ClCompile Include="1122.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="3015.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="input.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
   </ItemGroup>
 </Project>
