--- a/ReposBOJ.vcxproj.filters
+++ b/ReposBOJ.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="1708.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="9240.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
