--- a/ReposBOJ.vcxproj.filters
+++ b/ReposBOJ.vcxproj.filters
@@ -20,8 +20,8 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="6588.cpp">
+    <None Include="18290.cpp">
       <Filter>소스 파일</Filter>
-    </ClCompile>
+    </None>
   </ItemGroup>
 </Project>
