--- a/ReposBOJ.vcxproj
+++ b/ReposBOJ.vcxproj
@@ -22,7 +22,8 @@
     <ClInclude Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.28.29910\include\bits\stdc++.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="7578.cpp" />
+    <ClCompile Include="1506.cpp" />
+    <ClCompile Include="init.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
